Add workflow for building docker image

--- a/kustomize/base/kustomization.yaml
+++ b/kustomize/base/kustomization.yaml
@@ -6,6 +6,6 @@ resources:
 - pgsync.yaml
 namespace: nadelog
 images:
-- name: nadelog-backend
-  newName: ghcr.io/brigadasos/nadelog-backend
+- name: nadelog
+  newName: ghcr.io/brigadasos/nadelog
   newTag: v0.0.1
