--- a/kustomize/base/kustomization.yaml
+++ b/kustomize/base/kustomization.yaml
@@ -1,9 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- pgroonga.yaml
-- brigadasos-db.yaml
-- pgsync.yaml
+- nadelog-backend.yaml
 namespace: nadelog
 images:
 - name: nadelog
