Fix wrong dns name

--- a/kustomize/base/nadelog-backend.yaml
+++ b/kustomize/base/nadelog-backend.yaml
@@ -85,7 +85,7 @@ metadata:
 spec:
   secretName: certificate-nadelog-backend
   dnsNames:
-    - api.nadelog.brigadasos.xyz
+    - api.log.brigadasos.xyz
   issuerRef:
     name: clusterissuer-le
     kind: ClusterIssuer
