--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,20 @@
     "netlify": "netlify init"
   },
   "dependencies": {
+    "@mdi/js": "^7.4.47",
+    "axios": "^1.6.3",
+    "flowbite": "^2.2.1",
     "netlify-cli": "^17.10.2",
-    "vue": "^3.3.11"
+    "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
+    "vue": "^3.3.11",
+    "vue-i18n": "^9.8.0",
+    "vue-meta": "^2.4.0",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vue-tsc": "^1.8.25"
